# vibebox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  build.rs  install  install.sh  readme.md  vibebox.toml
.github/workflows/: ci.yml  release.yml
docs/: arch.mermaid  implementations.md  new_features.md  old_features.md  tasks.md  tui.md
scripts/: commit-check.sh
src/: commands.rs  config.rs  error_report.sh  explain.rs  instance.rs  lib.rs  main.rs  provision.sh  resize_disk.sh  session_manager.rs  ssh.sh  tui.rs  utils.rs  vm.rs  vm_manager.rs
tests/: e2e_cli.rs  e2e_vm.rs  e2e_vm_mock.rs  explain_integration.rs
