[package]
name = "vibebox"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "*"
objc2-foundation = { version = "*", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSError",
    "NSFileHandle",
    "NSData",
    "NSDate",
    "NSRunLoop",
    "NSObject",
] }
objc2-virtualization = "*"
block2 = "*"
dispatch2 = "*"
libc = "*"
lexopt = "0.3"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2.0.18"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
toml = "0.9.8"
uuid = { version = "1", features = ["v7", "serde"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
tui-textarea = { version = "0.4", default-features = false, features = ["ratatui"] }
