[package]
name = "vibebox"
version = "0.2.1"
edition = "2024"
authors = ["Finn Sheng"]
description = "Ultrafast CLI on Apple Silicon macOS for fast, sandboxed development and LLM agents."
homepage = "https://github.com/robcholz/vibebox"
repository = "https://github.com/robcholz/vibebox"
readme = "README.md"
license = "MIT"
categories = ["virtualization","command-line-utilities"]
keywords = ["virtualization", "ai", "macos", "agent", "sandbox"]
rust-version = "1.91.1"

[dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSError",
    "NSFileHandle",
    "NSData",
    "NSDate",
    "NSRunLoop",
    "NSObject",
] }
objc2-virtualization = "0.3.2"
block2 = "0.6.2"
dispatch2 = "0.3.0"
libc = "0.2.180"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2.0.18"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
toml = "0.9.8"
uuid = { version = "1", features = ["v7", "serde"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.12.0"
